--- a/backend/src/main/webapp/app/views/register/main.html
+++ b/backend/src/main/webapp/app/views/register/main.html
@@ -15,7 +15,7 @@
 				        </div>
 					</div>
                     <i class="fa fa-list-alt fa-fw"></i> {{ headerTitle }}
-                    <button type="button" class="btn btn-warning btn-circle btn-lg" style="position: absolute; right: 0px;" ng-click="gotoSelected()">
+                    <button type="button" class="btn btn-warning btn-circle btn-lg" style="position: absolute; right: 0px; top: -5px;" ng-click="gotoSelected()">
                     	<i class="fa" ng-class="iconBtn"></i>
                     </button>
                 </div>
