--- a/backend/src/main/webapp/app/views/member_type/main.html
+++ b/backend/src/main/webapp/app/views/member_type/main.html
@@ -9,7 +9,7 @@
         <div class="col-lg-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">
-                    <i class="fa fa-list-alt fa-fw"></i> แสดงประเภทสมาชิก
+                    <i class="fa fa-list-alt fa-fw"></i> {{ headerTitle }}
                     <button type="button" class="btn btn-warning btn-circle btn-lg" style="position: absolute; right: 0px;" ng-click="gotoSelected()">
                     	<i class="fa" ng-class="iconBtn"></i>
                     </button>
