--- a/backend/src/main/webapp/app/views/register/main.html
+++ b/backend/src/main/webapp/app/views/register/main.html
@@ -10,8 +10,8 @@
             <div class="panel panel-primary">
                 <div class="panel-heading">
                 	<div style="position: absolute; left: 50%;" ng-show="url == 'search'">
-						<div style="color: black; position: relative; left: -50%; top: -60px;">
-				            <img id="imgUpload" class="img-thumbnail" ng-src="{{ imageSource }}" width="100" ng-show="imageSource">
+						<div style="color: black; position: relative; left: -50%; top: -75px;">
+				            <img id="imgUpload" class="img-thumbnail" ng-src="{{ imageSource }}" style="width: 100px; height: 120px;" ng-show="imageSource">
 				        </div>
 					</div>
                     <i class="fa fa-list-alt fa-fw"></i> {{ headerTitle }}
