--- a/backend/src/main/webapp/app/views/register/search.html
+++ b/backend/src/main/webapp/app/views/register/search.html
@@ -61,7 +61,7 @@
 					</td>
 					<td>
 						<i class="fa fa-times fa-lg user-action-icon-danger" ng-click="deleteItem(data.memberTypeId)"></i>&emsp;
-						<i class="fa fa-edit fa-lg user-action-icon-primary" ng-click="edit(data)"></i>
+						<i class="fa fa-edit fa-lg user-action-icon-primary" ng-click="edit(data.regId)"></i>
 					</td>
 				</tr>
 			</tbody>
