--- a/backend/src/main/webapp/app/views/register/add.html
+++ b/backend/src/main/webapp/app/views/register/add.html
@@ -31,7 +31,7 @@
 					<input tabindex="5" name="fingerId" class="form-control" ng-model="data.fingerId">
 				</div>
 				
-				<div class="col-lg-6 form-group">
+				<div class="col-lg-6 form-group" ng-class="{'has-error':persistForm.birthday.$invalid}">
 					<label class="control-label">วันเดือนปีเกิด</label>
 					<div class="input-group">
 						<input tabindex="6" name="birthday" type="text" readonly="readonly" class="form-control" datepicker-popup="{{format}}"
@@ -72,11 +72,11 @@
 				</div>
 				<div class="form-group col-lg-4" ng-class="{'has-error':persistForm.password.$invalid}">
 					<label class="control-label">Password</label>
-					<input tabindex="15" name="password" type="password" class="form-control" ng-model="password" required>
+					<input tabindex="15" name="password" type="password" class="form-control" ng-model="password" ng-required="isPassRequired">
 				</div>
 				<div class="form-group col-lg-4" ng-class="{'has-error':persistForm.rePassword.$invalid}">
 					<label class="control-label">Re-Password</label>
-					<input tabindex="16" name="rePassword" type="password" class="form-control" ng-model="rePassword" required>
+					<input tabindex="16" name="rePassword" type="password" class="form-control" ng-model="rePassword" ng-required="isPassRequired">
 				</div>
 				<div class="form-group col-lg-6" ng-class="{'has-error':persistForm.memberTypeId.$invalid}">
 					<label class="control-label">ประเภทสมาชิก</label>
@@ -90,11 +90,11 @@
 					<label class="control-label">สิทธิ</label>
 					<select tabindex="18" name="roles" class="form-control" ng-model="data.authen.authority" required>
 						<option value="">{{'user.addpage.dropdown_role_msg' | translate}}</option>
-				      	<option ng-selected="{{ user.roles[0].authority == option.authority }}" 
+				      	<option ng-selected="{{ data.authen.authority == option.authority }}" 
 				      			ng-repeat="option in rolesConstant" value="{{ option.authority }}">{{ option.name }}</option>
 				    </select>
 	            </div>
-				<div class="form-group col-lg-6">
+				<div class="form-group col-lg-6" ng-class="{'has-error':persistForm.expireDate.$invalid}">
 					<label class="control-label">วันหมดอายุ</label>
 					<div class="input-group">
 						<input tabindex="19" name="expireDate" type="text" readonly="readonly" class="form-control" datepicker-popup="{{format}}"
@@ -139,11 +139,10 @@
 					<label class="control-label">มือถือ</label>
 					<input tabindex="9" name="conMobileNo" class="form-control" ng-model="data.conMobileNo">
 				</div>
-				<div class="form-group col-lg-2">
+				<div class="form-group col-lg-2" ng-class="{'has-error':persistForm.conEmail.$invalid}">
 					<label class="control-label">ที่อยู่อีเมล์</label>
-					<input tabindex="10" name="conEmail" class="form-control" ng-model="data.conEmail">
+					<input tabindex="10" name="conEmail" type="email" class="form-control" ng-model="data.conEmail">
 				</div>
-			
 				<div class="form-group col-lg-2">
 					<label class="control-label">Line ID</label>
 					<input tabindex="11" name="conLineId" class="form-control" ng-model="data.conLineId">
