--- a/backend/src/main/webapp/app/views/register/add.html
+++ b/backend/src/main/webapp/app/views/register/add.html
@@ -101,7 +101,7 @@
 							current-text="{{'datepicker.today' | translate}}"
 							clear-text="{{'datepicker.clear' | translate}}"
 							close-text="{{'datepicker.close' | translate}}"
-							ng-model="data.expireDate" is-open="expireDatePicker" /> 
+							ng-model="data.expireDate" is-open="expireDatePicker" required /> 
 							<span class="input-group-btn">
 							<button type="button" class="btn btn-default" ng-click="openExpireDate($event)">
 								<i class="glyphicon glyphicon-calendar"></i>
