--- a/backend/src/main/webapp/app/views/user/search.html
+++ b/backend/src/main/webapp/app/views/user/search.html
@@ -56,6 +56,7 @@
 					<th>#</th>
 					<th>{{'user.table.header.username_show' | translate}}</th>
 					<th>{{'user.table.header.username' | translate}}</th>
+					<th>ตำแหน่งงาน</th>
 					<th>{{'user.table.header.role' | translate}}</th>
 					<th>{{'user.table.header.status' | translate}}</th>
 					<th>{{'user.table.header.created_date' | translate}}</th>
@@ -67,6 +68,7 @@
 					<td>{{ $index + 1 + ((formData.currentPage - 1) * itemsPerPage) }}</td>
 					<td>{{ u.userNameShow }}</td>
 					<td>{{ u.userName }}</td>
+					<td>{{ u.workPositionName }}</td>
 					<td>{{ u.roles[0].name }}</td>
 					<td>
 						<i class="fa fa-check-circle fa-lg user-status-enabled-icon" ng-show="u.enabled"></i>
