--- a/backend/src/main/webapp/app/views/receipt/search.html
+++ b/backend/src/main/webapp/app/views/receipt/search.html
@@ -103,7 +103,7 @@
 					<td>
 						<i class="fa fa-times fa-lg user-action-icon-danger" ng-click="deleteItem(u.id)"></i>&emsp;
 						<i class="fa fa-edit fa-lg user-action-icon-primary" ng-click="editItem(u.id)"></i>&emsp;
-						<i class="fa fa-print fa-lg user-action-icon-primary" ng-click="print(u)"></i>
+						<i class="fa fa-print fa-lg user-action-icon-primary" ng-click="print(u.id)"></i>
 					</td>
 				</tr>
 			</tbody>
